welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: type mismatch;
 found   : Int
 required: Boolean
    if (nums(k+1) == nums(k) + 5 && nums(k+2) == nums(k) - 1 || (nums(k)==2 && nums(k+1)==7 && Math.abs(nums(k+2))) <= 2) {
                                                                                                       ^